--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,299 @@
+<html>
+<head>
+<title>PRESSKIT FORCE V2</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<!-- Save for Web Styles (PRESSKIT FORCE V2.jpg) -->
+<style type="text/css">
+<!--
 
+#Tableau_01 {
+	position:absolute;
+	left:0px;
+	top:0px;
+	width:1459px;
+	height:821px;
+}
+
+#PRESSKIT-FORCE-V2-01 {
+	position:absolute;
+	left:0px;
+	top:0px;
+	width:1459px;
+	height:253px;
+}
+
+#PRESSKIT-FORCE-V2-02 {
+	position:absolute;
+	left:0px;
+	top:253px;
+	width:1014px;
+	height:474px;
+}
+
+#Soundcloud {
+	position:absolute;
+	left:1014px;
+	top:253px;
+	width:362px;
+	height:62px;
+}
+
+#PRESSKIT-FORCE-V2-04 {
+	position:absolute;
+	left:1376px;
+	top:253px;
+	width:83px;
+	height:568px;
+}
+
+#PRESSKIT-FORCE-V2-05 {
+	position:absolute;
+	left:1014px;
+	top:315px;
+	width:362px;
+	height:34px;
+}
+
+#Youtube {
+	position:absolute;
+	left:1014px;
+	top:349px;
+	width:362px;
+	height:62px;
+}
+
+#PRESSKIT-FORCE-V2-07 {
+	position:absolute;
+	left:1014px;
+	top:411px;
+	width:362px;
+	height:33px;
+}
+
+#Photos {
+	position:absolute;
+	left:1014px;
+	top:444px;
+	width:362px;
+	height:61px;
+}
+
+#PRESSKIT-FORCE-V2-09 {
+	position:absolute;
+	left:1014px;
+	top:505px;
+	width:362px;
+	height:47px;
+}
+
+#Videos {
+	position:absolute;
+	left:1014px;
+	top:552px;
+	width:362px;
+	height:61px;
+}
+
+#PRESSKIT-FORCE-V2-11 {
+	position:absolute;
+	left:1014px;
+	top:613px;
+	width:362px;
+	height:208px;
+}
+
+#PRESSKIT-FORCE-V2-12 {
+	position:absolute;
+	left:0px;
+	top:727px;
+	width:758px;
+	height:9px;
+}
+
+#Spotify {
+	position:absolute;
+	left:758px;
+	top:727px;
+	width:74px;
+	height:69px;
+}
+
+#PRESSKIT-FORCE-V2-14 {
+	position:absolute;
+	left:832px;
+	top:727px;
+	width:75px;
+	height:94px;
+}
+
+#PRESSKITx20FORCEx20V2-15 {
+	position:absolute;
+	left:907px;
+	top:727px;
+	width:107px;
+	height:77px;
+}
+
+#PRESSKIT-FORCE-V2-16 {
+	position:absolute;
+	left:0px;
+	top:736px;
+	width:468px;
+	height:85px;
+}
+
+#Insta {
+	position:absolute;
+	left:468px;
+	top:736px;
+	width:69px;
+	height:68px;
+}
+
+#PRESSKIT-FORCE-V2-18 {
+	position:absolute;
+	left:537px;
+	top:736px;
+	width:68px;
+	height:85px;
+}
+
+#Twitter {
+	position:absolute;
+	left:605px;
+	top:736px;
+	width:70px;
+	height:68px;
+}
+
+#PRESSKIT-FORCE-V2-20 {
+	position:absolute;
+	left:675px;
+	top:736px;
+	width:83px;
+	height:85px;
+}
+
+#PRESSKIT-FORCE-V2-21 {
+	position:absolute;
+	left:758px;
+	top:796px;
+	width:74px;
+	height:25px;
+}
+
+#PRESSKIT-FORCE-V2-22 {
+	position:absolute;
+	left:468px;
+	top:804px;
+	width:69px;
+	height:17px;
+}
+
+#PRESSKIT-FORCE-V2-23 {
+	position:absolute;
+	left:605px;
+	top:804px;
+	width:70px;
+	height:17px;
+}
+
+#PRESSKIT-FORCE-V2-24 {
+	position:absolute;
+	left:907px;
+	top:804px;
+	width:107px;
+	height:17px;
+}
+
+-->
+</style>
+<!-- End Save for Web Styles -->
+</head>
+<body style="background-color:#FFFFFF; margin-top: 0px; margin-bottom: 0px; margin-left: 0px; margin-right: 0px;">
+<!-- Save for Web Slices (PRESSKIT FORCE V2.jpg) -->
+<div id="Tableau_01">
+	<div id="PRESSKIT-FORCE-V2-01">
+		<img src="images/PRESSKIT-FORCE-V2_01.jpg" width="1459" height="253" alt="">
+	</div>
+	<div id="PRESSKIT-FORCE-V2-02">
+		<img src="images/PRESSKIT-FORCE-V2_02.jpg" width="1014" height="474" alt="">
+	</div>
+	<div id="Soundcloud">
+		<a href="https://soundcloud.com/veiga000/veiga-force/s-rm8oGEmztH2?si=c830c435658141cba4b43e65bccd4797&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
+			<img src="images/Soundcloud.jpg" width="362" height="62" border="0" alt=""></a>
+	</div>
+	<div id="PRESSKIT-FORCE-V2-04">
+		<img src="images/PRESSKIT-FORCE-V2_04.jpg" width="83" height="568" alt="">
+	</div>
+	<div id="PRESSKIT-FORCE-V2-05">
+		<img src="images/PRESSKIT-FORCE-V2_05.jpg" width="362" height="34" alt="">
+	</div>
+	<div id="Youtube">
+		<a href="https://www.youtube.com/watch?v=OU275iNrFLU" target="_blank">
+			<img src="images/Youtube.jpg" width="362" height="62" border="0" alt=""></a>
+	</div>
+	<div id="PRESSKIT-FORCE-V2-07">
+		<img src="images/PRESSKIT-FORCE-V2_07.jpg" width="362" height="33" alt="">
+	</div>
+	<div id="Photos">
+		<a href="https://www.dropbox.com/scl/fo/hzbgxagy2bf82wkm9fkh8/h?rlkey=uri583buxib7mi5st5et0oyd8&dl=0" target="_blank">
+			<img src="images/Photos.jpg" width="362" height="61" border="0" alt=""></a>
+	</div>
+	<div id="PRESSKIT-FORCE-V2-09">
+		<img src="images/PRESSKIT-FORCE-V2_09.jpg" width="362" height="47" alt="">
+	</div>
+	<div id="Videos">
+		<a href="https://www.dropbox.com/scl/fo/u71ry44dnaxhtjxavotrq/h?rlkey=406mt5w8pblzhnoksaiupp7sx&dl=0" target="_blank">
+			<img src="images/Videos.jpg" width="362" height="61" border="0" alt=""></a>
+	</div>
+	<div id="PRESSKIT-FORCE-V2-11">
+		<img src="images/PRESSKIT-FORCE-V2_11.jpg" width="362" height="208" alt="">
+	</div>
+	<div id="PRESSKIT-FORCE-V2-12">
+		<img src="images/PRESSKIT-FORCE-V2_12.jpg" width="758" height="9" alt="">
+	</div>
+	<div id="Spotify">
+		<a href="https://open.spotify.com/intl-fr/artist/1mbSvcnVbN4iVwLEaTnJQd?si=wCcWJ7qHTpqCTXyqZoTUVQ" target="_blank">
+			<img src="images/Spotify.jpg" width="74" height="69" border="0" alt=""></a>
+	</div>
+	<div id="PRESSKIT-FORCE-V2-14">
+		<img src="images/PRESSKIT-FORCE-V2_14.jpg" width="75" height="94" alt="">
+	</div>
+	<div id="PRESSKITx20FORCEx20V2-15">
+		<a href="https://www.youtube.com/@veiga0009" target="_blank">
+			<img src="images/PRESSKIT-FORCE-V2_15.jpg" width="107" height="77" border="0" alt=""></a>
+	</div>
+	<div id="PRESSKIT-FORCE-V2-16">
+		<img src="images/PRESSKIT-FORCE-V2_16.jpg" width="468" height="85" alt="">
+	</div>
+	<div id="Insta">
+		<a href="https://www.instagram.com/veiga000/" target="_blank">
+			<img src="images/Insta.jpg" width="69" height="68" border="0" alt=""></a>
+	</div>
+	<div id="PRESSKIT-FORCE-V2-18">
+		<img src="images/PRESSKIT-FORCE-V2_18.jpg" width="68" height="85" alt="">
+	</div>
+	<div id="Twitter">
+		<a href="https://twitter.com/VEIGA_000" target="_blank">
+			<img src="images/Twitter.jpg" width="70" height="68" border="0" alt=""></a>
+	</div>
+	<div id="PRESSKIT-FORCE-V2-20">
+		<img src="images/PRESSKIT-FORCE-V2_20.jpg" width="83" height="85" alt="">
+	</div>
+	<div id="PRESSKIT-FORCE-V2-21">
+		<img src="images/PRESSKIT-FORCE-V2_21.jpg" width="74" height="25" alt="">
+	</div>
+	<div id="PRESSKIT-FORCE-V2-22">
+		<img src="images/PRESSKIT-FORCE-V2_22.jpg" width="69" height="17" alt="">
+	</div>
+	<div id="PRESSKIT-FORCE-V2-23">
+		<img src="images/PRESSKIT-FORCE-V2_23.jpg" width="70" height="17" alt="">
+	</div>
+	<div id="PRESSKIT-FORCE-V2-24">
+		<img src="images/PRESSKIT-FORCE-V2_24.jpg" width="107" height="17" alt="">
+	</div>
+</div>
+<!-- End Save for Web Slices -->
+</body>
+</html>
